[package]
name = "arxos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
build = "build.rs"

[lib]
name = "arxos"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = ["std"]
std = []
async-sensors = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:rumqttc",
]
economy = ["dep:ethers", "dep:async-trait", "dep:reqwest", "dep:tokio"]

[dependencies]
arx = { path = "../arx" }
# Re-export all workspace dependencies for integration tests
arx-command-catalog = { path = "../arx-command-catalog" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
git2 = { workspace = true }
url = { workspace = true }
nalgebra = { workspace = true }
geo = { workspace = true }
rstar = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
num_cpus = { workspace = true }
tempfile = { workspace = true }
log = { workspace = true }
regex = "1.10"
sha2 = { workspace = true }
glob = { workspace = true }
criterion = { workspace = true }
gltf = { version = "1.4.1", default-features = false }
gltf-json = { version = "1.4.1", default-features = false }
zip = "0.6"
csv = "1.3"
ethers = { version = "2.0", features = ["abigen", "rustls"], optional = true }
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
# GPG/PGP support (Phase 3: User Identity)
# Note: Using Git's native GPG support via git2, no additional dependencies needed

# Hardware sensor dependencies (feature-gated for async operations)
axum = { version = "0.7", features = ["macros"], optional = true }
tokio = { workspace = true, optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", features = ["sink"], optional = true }
rumqttc = { version = "0.20", optional = true }

[dev-dependencies]
arxui = { path = "../arxui" }
proptest = "1.4"
serial_test = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "arxos-runtime"
path = "src/main.rs"
required-features = ["std"]

[[bench]]
name = "core_benchmarks"
path = "../../benches/core_benchmarks.rs"
harness = false

[[bench]]
name = "performance_benchmarks"
path = "../../benches/performance_benchmarks.rs"
harness = false

# AR Integration Tests
[[test]]
name = "ar_workflow_integration_test"
path = "../../tests/ar/ar_workflow_integration_test.rs"

[[test]]
name = "ar_complete_workflow_test"
path = "../../tests/ar/ar_complete_workflow_test.rs"

[[test]]
name = "ar_gltf_integration_tests"
path = "../../tests/ar/ar_gltf_integration_tests.rs"

[[test]]
name = "ar_pending_manager_tests"
path = "../../tests/ar/ar_pending_manager_tests.rs"

[[test]]
name = "ar_usdz_integration_tests"
path = "../../tests/ar/ar_usdz_integration_tests.rs"

[[test]]
name = "ar_json_helpers_tests"
path = "../../tests/ar/ar_json_helpers_tests.rs"

# Hardware Tests
[[test]]
name = "hardware_integration_tests"
path = "../../tests/hardware/hardware_integration_tests.rs"

[[test]]
name = "hardware_http_integration_tests"
path = "../../tests/hardware/hardware_http_integration_tests.rs"

[[test]]
name = "hardware_workflow_tests"
path = "../../tests/hardware/hardware_workflow_tests.rs"

# Persistence Tests
[[test]]
name = "persistence_tests"
path = "../../tests/persistence/persistence_tests.rs"

# E2E Tests
[[test]]
name = "e2e_workflow_tests"
path = "../../tests/e2e/e2e_workflow_tests.rs"

[[test]]
name = "e2e_command_integration_tests"
path = "../../tests/e2e/e2e_command_integration_tests.rs"

# IFC Tests
[[test]]
name = "ifc_workflow_tests"
path = "../../tests/ifc/ifc_workflow_tests.rs"

[[test]]
name = "ifc_sync_integration_tests"
path = "../../tests/ifc/ifc_sync_integration_tests.rs"

# TUI Tests
[[test]]
name = "tui_workflow_integration_tests"
path = "../../tests/tui/tui_workflow_integration_tests.rs"

[[test]]
name = "tui_component_interaction_tests"
path = "../../tests/tui/tui_component_interaction_tests.rs"

[[test]]
name = "tui_event_flow_tests"
path = "../../tests/tui/tui_event_flow_tests.rs"

[[test]]
name = "tui_terminal_integration_tests"
path = "../../tests/tui/tui_terminal_integration_tests.rs"

[[test]]
name = "tui_users_browser_integration_tests"
path = "../../tests/tui/users_browser_integration_tests.rs"

[[test]]
name = "spreadsheet_component_integration_tests"
path = "../../tests/spreadsheet/spreadsheet_component_integration_tests.rs"

[[test]]
name = "spreadsheet_data_source_integration_tests"
path = "../../tests/spreadsheet/spreadsheet_data_source_integration_tests.rs"

[[test]]
name = "spreadsheet_filesystem_integration_tests"
path = "../../tests/spreadsheet/spreadsheet_filesystem_integration_tests.rs"

[[test]]
name = "spreadsheet_command_integration_tests"
path = "../../tests/spreadsheet/spreadsheet_command_integration_tests.rs"

# Build script tests
[[test]]
name = "build_script_tests"
path = "../../tests/build_script_tests.rs"

# Binary Tests
[[test]]
name = "convert_3d_scanner_scan_tests"
path = "../../tests/bin/convert_3d_scanner_scan_tests.rs"

[[test]]
name = "example_validation_tests"
path = "../../tests/examples/example_validation_tests.rs"

[[test]]
name = "spatial_tests"
path = "../../tests/commands/spatial_tests.rs"

[[test]]
name = "error_path_tests"
path = "../../tests/commands/error_path_tests.rs"

[[test]]
name = "wing_tests"
path = "../../tests/commands/wing_tests.rs"

[[test]]
name = "config_validation_tests"
path = "../../tests/config/config_validation_tests.rs"

