[package]
name = "arxos-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
heapless = { workspace = true }
postcard = { workspace = true }
defmt = { workspace = true, optional = true }

# Database dependencies (only with std feature)
rusqlite = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }

# SSH server dependencies (only with std feature)
russh = { version = "0.43", optional = true }
russh-keys = { version = "0.43", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = { version = "1.0", optional = true }

# Document parsing dependencies (only with std feature)
lopdf = { version = "0.32", optional = true }
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
regex = { version = "1.10", optional = true }

# Additional dependencies for crypto and logging
log = { version = "0.4", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = ["std"]
std = ["dep:rusqlite", "dep:uuid", "dep:serde", "dep:serde_json", "dep:chrono", "dep:rand", "dep:russh", "dep:russh-keys", "dep:tokio", "dep:async-trait", "dep:thiserror", "dep:lopdf", "dep:image", "dep:imageproc", "dep:regex", "dep:log", "dep:ed25519-dalek", "dep:sha2"]
no_std = []
defmt = ["dep:defmt"]

[lib]
name = "arxos_core"
path = "lib.rs"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "ply_to_ascii"
required-features = ["std"]

[[example]]
name = "ply_to_ascii_enhanced"
required-features = ["std"]

[[example]]
name = "ply_to_ascii_3d"
required-features = ["std"]