[package]
name = "arxos-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
heapless = { workspace = true }
postcard = { workspace = true }
defmt = { workspace = true, optional = true }

# Database dependencies (only with std feature)
rusqlite = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }

# Async and error handling dependencies (only with std feature)
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = { version = "1.0", optional = true }

# Document parsing dependencies (only with std feature)
lopdf = { version = "0.32", optional = true }
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
regex = { version = "1.10", optional = true }

# Additional dependencies for crypto and logging
log = { version = "0.4", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
sha2 = { version = "0.10", optional = true }

# Performance optimization dependencies
lru = { version = "0.12", optional = true }
lazy_static = { version = "1.4", optional = true }

# Async and parallel processing dependencies
rayon = { version = "1.8", optional = true }
crossbeam = { version = "0.8", optional = true }
parking_lot = { version = "0.12", optional = true }
futures = { version = "0.3", optional = true }
num_cpus = { version = "1.16", optional = true }

# REST API dependencies removed (RF-only system)

# Terminal UI dependencies
termion = { version = "2.0", optional = true }

[features]
default = ["std"]
std = ["dep:rusqlite", "dep:uuid", "dep:serde", "dep:serde_json", "dep:chrono", "dep:rand", "dep:tokio", "dep:async-trait", "dep:thiserror", "dep:lopdf", "dep:image", "dep:imageproc", "dep:regex", "dep:log", "dep:ed25519-dalek", "dep:sha2", "dep:lru", "dep:lazy_static", "dep:rayon", "dep:crossbeam", "dep:parking_lot", "dep:futures", "dep:num_cpus", "dep:termion"]
no_std = []
defmt = ["dep:defmt"]

[lib]
name = "arxos_core"
path = "lib.rs"

# Removed HTTP server binary (RF-only policy)

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "holographic_bench"
harness = false
path = "../../benches/holographic_bench.rs"

[[bench]]
name = "simd_benchmarks"
harness = false
path = "benches/simd_benchmarks.rs"

[[example]]
name = "ply_to_ascii"
required-features = ["std"]

[[example]]
name = "ply_to_ascii_enhanced"
required-features = ["std"]

[[example]]
name = "ply_to_ascii_3d"
required-features = ["std"]

# Removed HTTP client example (RF-only policy)

[[example]]
name = "building_database"
path = "../../examples/building_database.rs"
required-features = ["std"]