[package]
name = "arxos-terminal"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arxos-core = { path = "../core" }
crossterm = { workspace = true }
ratatui = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "arxos"
path = "main.rs"