[package]
name = "arxos-terminal"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# Removed invalid test_scan binary

[dependencies]
arxos-core = { path = "../core" }
crossterm = { workspace = true }
ratatui = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# SSH client dependencies
russh = "0.43"
russh-keys = "0.43"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
anyhow = "1.0"

# For secure password input
rpassword = "7.3"

# For configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"

[[bin]]
name = "arxos"
path = "main.rs"