[package]
name = "arduino-motion-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
arduino-hal = "0.19"
embedded-hal = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json-core = "0.5"
heapless = "0.8"
nb = "1.0"
panic-halt = "0.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
