[package]
name = "esp32-temperature-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-hal = "0.12"
esp-idf-svc = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
dht-sensor = "0.3"
chrono = { version = "0.4", features = ["serde"] }
