[package]
name = "rp2040-air-quality-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-hal = "0.12"
embedded-hal = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json-core = "0.5"
heapless = "0.8"
nb = "1.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
chrono = { version = "0.4", features = ["serde"] }
mqtt = "0.12"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
